# cvm-net-perf

./: .gitignore  READMD.md  measure_prep.sh  prep.sh
AMDSEV/: .gitignore  README.md  common.sh  guest.fd  install.sh  launch-qemu.sh
echo/: .gitignore  Makefile  echo_client.cpp  echo_client_async.cpp  echo_client_closed.cpp  echo_client_open.cpp  echo_server.cpp  echo_server_async.cpp  run.sh  warmup.cpp
hires-logger/: .gitignore  CMakeLists.txt  build.sh
hires-logger/examples/: consumer.cpp  echo_server_async_hires.cpp  producer.cpp
hires-logger/inc/: cycles.hpp  ops.hpp
hires-logger/khires/: .gitignore  Kbuild  Makefile  khires.c
hires-logger/profiler/: Cargo.toml  build.rs
hires-logger/profiler/rt/: Cargo.toml
hires-logger/profiler/rt/src/: lib.rs
hires-logger/profiler/rt_ffi/: Cargo.toml  build.rs
hires-logger/profiler/rt_ffi/src/: lib.rs
hires-logger/profiler/src/: main.rs
hires-logger/rt/: CMakeLists.txt
hires-logger/rt/include/: c_api.h  rt.hpp  rt_c.h
hires-logger/rt/src/: c_api.cpp  rt.cpp  rt_c.cpp
hires-logger/shared/: common.h  ops.h
hires-logger/src/: cycles.cc
hires_analytic/: echo_log_tidy.ipynb  main.ipynb  pyproject.toml
logging-cost/: Makefile  dummy_writer.cpp  measure_cycle.sh  measure_dummy_writer.sh  measure_exit.sh  measure_hires_logger.sh  run_server_w_cpu_pin.sh  shared.sh
